agregado cambios de evento

--- a/site/layouts/section/events.html
+++ b/site/layouts/section/events.html
@@ -1,5 +1,86 @@
 {{ define "main" }}
 
-<h1>Los eventos estaran disponibles proximamente...</h1>
+<div class="container">
+  <div class="col-md-12">
+    <div class="content_proximo_event">
+      <div class="left">
+        <div class="event_description">
+          <h3>Proximo evento</h3>
+          <div class="datos_evento">
+            <p>Hora: 12:30 am</p>
+            <p>Lugar: Calles x y z</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, ducimus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="right">
+        <div class="event_description">
+          <h3>Proximo evento</h3>
+          <div class="datos_evento">
+            <p>Hora: 12:30 am</p>
+            <p>Lugar: Calles x y z</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, molestiae.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <ul class="search_link">
+      <li><a href="#">Facebook</a></li>
+      <li><a href="#">Twitter</a></li>
+      <li><a href="#">Google+</a></li>
+      <li><a href="#">LinkedIn</a></li>
+    </ul>
+  </div>
+  <div class="col-md-12">
+    <h3>Eventos Anteriores</h3>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="evento_anterior">
+          <p>Lorem ipsum dolor sit.</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="evento_anterior">
+          <p>Lorem ipsum dolor sit.</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="evento_anterior">
+          <p>Lorem ipsum dolor sit.</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="evento_anterior">
+          <p>Lorem ipsum dolor sit.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-12">
+    <h3>Hangouts Anteriores </h3>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="evento_anterior">
+          <p>Lorem ipsum dolor sit.</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="evento_anterior">
+          <p>Lorem ipsum dolor sit.</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="evento_anterior">
+          <p>Lorem ipsum dolor sit.</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="evento_anterior">
+          <p>Lorem ipsum dolor sit.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 {{ end }}
