--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -6,5 +6,9 @@
     <h4>
       Bienvenidos a la comunidad freeCodeCamp de Montevideo!!
     </h4>
+
+    <a class="call-to-action" href="{{ .Site.Params.facebookGroup }}" target="_blank" rel="noopener">
+      Se uno de nosotros
+    </a>
   </div>
 </div>
