--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,8 +2,9 @@
 @import "imports/skeleton.css";
 
 :root {
-  --dark-background-color: #222;
-  --light-text-color: #fff;
+  --dark-background-color: #2c3e50;
+  --light-text-color: #ecf0f1;
+  --primary-color: #e74c3c;
 
   --facebook-color: #3B5998;
   --facebook-color-hover: #304d8a;
@@ -60,7 +61,8 @@ blockquote {
   background-position: center;
   background-size: cover;
   color: var(--light-text-color);
-  height: 90vh;
+
+  height: 80vh;
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -71,13 +73,21 @@ blockquote {
     padding: 80px 10px;
   }
 
-  & .scroll-arrow {
+  & .call-to-action {
+    background-color: var(--primary-color);
     color: var(--light-text-color);
-    position: absolute;
-    bottom: 30px;
-    left: 50%;
-    margin-left: -20px;
-    animation: bounce 3s 1s infinite;
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 7px;
+    margin: 20px 0;
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: all .2s ease-in-out;
+
+    &:hover {
+      background-color: color(var(--primary-color) lightness(+5%));
+      box-shadow: 0 6px 20px rgba(0,0,0,.3);
+    }
   }
 }
 
