--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,8 @@
 @import "imports/reset.css";
 @import "imports/skeleton.css";
 
+@import "social-links.css";
+
 :root {
   --dark-background-color: #2c3e50;
   --light-text-color: #ecf0f1;
@@ -96,21 +98,6 @@ blockquote {
   color: var(--light-text-color);
 }
 
-.section.connect {
-  & .social-links {
-    padding: 20px 0;
-
-    & a {
-      text-decoration: none;
-    }
-
-    & .social-title {
-      display: block;
-      color: var(--text-color);
-      margin-bottom: 2em;
-    }
-  }
-}
 .facebook {
   color: var(--facebook-color);
   &:hover {
