latest posts in home page

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,7 +6,7 @@
 
     {{ partial "hero" . }}
 
-    {{ partial "learn" . }}
+    {{ partial "latest-posts" . }}
 
     <div id="connect" class="section connect">
       <div class="container">
