--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,11 +25,11 @@
   --border-color: #ccc;
 
   --content-padding-top: 90px;
-}
 
-@custom-media --sm-viewport only screen and (min-width: 48em);
-@custom-media --md-viewport only screen and (min-width: 64em);
-@custom-media --lg-viewport only screen and (min-width: 75em);
+  --small-media: 48em;
+  --medium-media: 64em;
+  --large-media: 75em;
+}
 
 body {
   font-family: 'Inconsolata', monospace;
@@ -133,7 +133,6 @@ blockquote {
 
 .navigation {
   background-color: var(--dark-background-color);
-  overflow: auto;
   position: fixed;
   width: 100%;
   z-index: 100;
@@ -150,10 +149,6 @@ blockquote {
       float: left;
       position: relative;
       margin: 0;
-    }
-
-    @media (--sm-viewport) {
-      display: block;
     }
   }
 
@@ -194,6 +189,18 @@ blockquote {
   }
 }
 
+@media (max-width: 48em) {
+  .navigation {
+    display: flex;
+
+    & .menu {
+      margin: 8px 0px;
+      overflow-x: scroll;
+      display: flex;
+    }
+  }
+}
+
 
 /*
   Blog
@@ -205,10 +212,6 @@ blockquote {
 
 .blog-categories {
   text-align: center;
-
-  @media (--sm-viewport) {
-    text-align: left;
-  }
 
   & .category-link {
     display: inline-block;
@@ -291,10 +294,6 @@ blockquote {
 
 .blog-sidebar {
   display: none;
-
-  @media (--sm-viewport) {
-    display: block;
-  }
 }
 
 
