--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,4 +1,11 @@
+.about {
+  padding: 10px 20px;
+}
 .about-content {
   font-size: 1.5em;
   margin-bottom: 3em;
+
+  @media (max-width: 48em) {
+    font-size: 1.3em;
+  }
 }
