add missing service-worker-registration file in html

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -78,6 +78,7 @@
     crossorigin="anonymous">
   </script>
 
+  <script src="/service-worker-registration.js"></script>
   <script src="/app.js"></script>
 </body>
 </html>
