remove exernal cdn assets and fix some sw registration issues

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -72,13 +72,11 @@
     </div>
   </footer>
 
-  <script
-    src="https://code.jquery.com/jquery-3.1.1.min.js"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-    crossorigin="anonymous">
-  </script>
+  {{ if .Page.IsHome }}
+    <script src="/service-worker-registration.js"></script>
+  {{ end }}
 
-  <script src="/service-worker-registration.js"></script>
+  <script src="/js/jquery.slim.min.js"></script>
   <script src="/app.js"></script>
 </body>
 </html>
