--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 @import "imports/reset.css";
 @import "imports/skeleton.css";
+@import "imports/flexboxgrid.min.css";
 
 @import "social-links.css";
 @import "about.css";
