--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -7,9 +7,7 @@
 
     <link rel="shortcut icon" href="/fcc.png">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/main.css"/>
 
     {{ template "_internal/opengraph.html" . }}
@@ -19,6 +17,6 @@
 
     <!-- Google Analytics -->
     {{ template "_internal/google_analytics.html" . }}
-    
+
   </head>
   <body>
