use local netlify badge

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -62,7 +62,7 @@
         </p>
         <p>
           <a href="https://www.netlify.com" target="_blank" rel="noopener">
-            <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" />
+            <img src="/img/netlify-color-accent.svg" />
           </a>
         </p>
         <p class="footer-heading">
