--- a/site/layouts/blog/single.html
+++ b/site/layouts/blog/single.html
@@ -4,8 +4,8 @@
 
 <main class="content">
     <div class="container">
-        <div class="row center-xs">
-            <div class="col-xs-12 col-sm-12 col-md-9">
+        <div class="columns is-centered">
+            <div class="column">
                 <div class="post">
                     <div class="post-title">
                         <h1>{{ .Title }}</h1>
@@ -28,8 +28,8 @@
             </div>
         </div>
 
-        <div class="row center-xs">
-            <div class="col-xs-12 col-sm-12 col-md-9">
+        <div class="columns is-centered">
+            <div class="column">
                 <hr>
 
                 <div class="post-comments">
