--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -10,7 +10,7 @@
 
     <div id="connect" class="section connect">
       <div class="container">
-        <h4>Conecta y Participa</h4>
+        <h2>Conecta y Participa</h2>
 
         <p>
           Estamos presentes en multiples plataformas donde puedes participar.
@@ -18,8 +18,8 @@
 
         {{ partial "social-links" . }}
 
-        <div class="row center-xs">
-            <div class="col-xs-8 col-md-6">
+        <div class="columns is-mobile is-centered">
+            <div class="column is-10-mobile is-8-tablet is-7-desktop">
                 {{ partial "subscribe" . }}
             </div>
         </div>
