--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -1,14 +1,16 @@
 <!-- Hero section -->
-<div class="section hero">
-  <div class="heading">
-    <h1>#freeCodeCampMVD: Hola Mundo!</h1>
+<div class="section hero is-dark is-medium">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">#freeCodeCampMVD: Hola Mundo!</h1>
 
-    <h4>
-      Bienvenidos a la comunidad freeCodeCamp de Montevideo!!
-    </h4>
+      <h4 class="subtitle">
+        Bienvenidos a la comunidad freeCodeCamp de Montevideo!!
+      </h4>
 
-    <a class="call-to-action" href="{{ .Site.Params.facebookGroup }}" target="_blank" rel="noopener">
-      Se uno de nosotros
-    </a>
+      <a class="call-to-action" href="{{ .Site.Params.facebookGroup }}" target="_blank" rel="noopener">
+        Se uno de nosotros
+      </a>
+    </div>
   </div>
 </div>
