--- a/site/layouts/partials/latest-posts.html
+++ b/site/layouts/partials/latest-posts.html
@@ -1,9 +1,9 @@
 <div class="section latest-posts">
   <!-- <div class="container"> -->
     <h2 class="latest-posts-title">Ultimos Articulos</h2>
-    <div class="row center-xs">
+    <div class="columns is-centered">
       {{ range first 3 (where .Data.Pages "Section" "blog") }}
-        <div class="col-xs-10 col-sm-7 col-md-4">
+        <div class="column">
           <div class="post-container" style="background-image: url('{{ .Params.image }}')">
             <a href="{{ .RelPermalink }}">
               <div class="post-overlay">
