--- a/site/layouts/partials/social-links.html
+++ b/site/layouts/partials/social-links.html
@@ -1,23 +1,23 @@
-<div class="row center-xs social-links">
-  <div class="col-xs-6 col-sm-3 col-md-3">
+<div class="columns is-centered social-links">
+  <div class="column is-one-quarter-desktop">
     <a class="facebook" href="{{ .Site.Params.facebookGroup }}" target="_blank" rel="noopener">
       <i class="fa fa-facebook-official fa-4x"></i>
       <span class="social-title">Grupo de Facebook</span>
     </a>
   </div>
-  <div class="col-xs-6 col-sm-3 col-md-3">
+  <div class="column is-one-half-tablet is-one-quarter-desktop">
     <a class="twitter" href="{{ .Site.Params.twitter }}" target="_blank" rel="noopener">
       <i class="fa fa-twitter fa-4x"></i>
       <span class="social-title">Twitter</span>
     </a>
   </div>
-  <div class="col-xs-6 col-sm-3 col-md-3">
+  <div class="column is-one-half-tablet is-one-quarter-desktop">
     <a class="github" href="{{ .Site.Params.githubOrg }}" target="_blank" rel="noopener">
       <i class="fa fa-github fa-4x"></i>
       <span class="social-title">GitHub Org</span>
     </a>
   </div>
-  <div class="col-xs-6 col-sm-3 col-md-3">
+  <div class="column is-one-half-tablet is-one-quarter-desktop">
     <a class="youtube" href="{{ .Site.Params.youtube }}" target="_blank" rel="noopener">
       <i class="fa fa-youtube-play fa-4x"></i>
       <span class="social-title">Canal YouTube</span>
