--- a/site/layouts/partials/subscribe.html
+++ b/site/layouts/partials/subscribe.html
@@ -2,8 +2,13 @@
   <h5>Suscribete y enterate de las últimas novedades!</h5>
 
   <form class="subscribe-form" name="subscribe" netlify>
-    <input class="u-full-width" type="email" name="email" placeholder="tu direccion de correo">
+    <div class="field">
+      <div class="control">
+        <input class="input is-medium" type="email" name="email" placeholder="tu direccion de correo">
+      </div>
+    </div>
+
     <input type="hidden" name="_subject" value="Nuevo suscriptor" />
-    <input class="button-primary" type="submit" value="Suscribirme">
+    <input class="button is-link" type="submit" value="Suscribirme">
   </form>
 </div>
