--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,6 +1,6 @@
   <footer class="section footer">
-    <div class="row center-xs">
-      <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="columns is-centered">
+      <div class="column">
         <p class="footer-heading">Comunidad freeCodeCamp Global</p>
 
         <div class="footer-links">
@@ -27,7 +27,7 @@
           </p>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="column">
         <p class="footer-heading">Comunidad freeCodeCamp Montevideo</p>
 
         <div class="footer-links">
@@ -55,8 +55,8 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12">
+    <div class="columns">
+      <div class="column is-12">
         <p class="footer-heading">
           Sitio Hosteado en Netlify
         </p>
