--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -7,6 +7,7 @@
 
     <link rel="shortcut icon" href="/fcc.png">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" href="/css/bulma.min.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/main.css"/>
 
