--- a/site/layouts/partials/learn.html
+++ b/site/layouts/partials/learn.html
@@ -6,16 +6,16 @@
       Aprende gratis desarrollo web de forma autodidacta y orientada a proyectos, apoyate en la comunidad y comparte tus experiencias para ayudar a otros.
     </p>
 
-    <div class="row center-xs">
-      <div class="col-xs-8 col-sm-7 col-md-4">
+    <div class="columns is-centered">
+      <div class="column">
         <img src="/img/landingIcons_learn.svg" alt="">
         <p>Aprende a tu ritmo</p>
       </div>
-      <div class="col-xs-8 col-sm-7 col-md-4">
+      <div class="column">
         <img src="/img/landingIcons_connect.svg" alt="">
         <p>Colabora con la comunidad</p>
       </div>
-      <div class="col-xs-8 col-sm-7 col-md-4">
+      <div class="column">
         <img src="/img/landingIcons_portfolio.svg" alt="">
         <p>Crea tu portfolio</p>
       </div>
