--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,3 @@
-@import "imports/reset.css";
-@import "imports/skeleton.css";
-@import "imports/flexboxgrid.min.css";
-
 @import "social-links.css";
 @import "about.css";
 @import "latest-posts.css";
@@ -47,16 +43,22 @@ blockquote {
   border-left: 0.25em solid #ddd;
 }
 
+a {
+  color: #1EAEDB;
+  text-decoration: none;
+
+  &:hover {
+    color: #0FA0CE;
+  }
+}
+
 .content {
   flex: 1;
   padding-top: var(--content-padding-top);
   min-height: calc(100vh - var(--content-padding-top));
 }
 
-.landing {
-}
 .section {
-  padding: 60px 10px;
   text-align: center;
   font-size: 1.3em;
 }
@@ -67,16 +69,11 @@ blockquote {
   background-size: cover;
   color: var(--light-text-color);
 
-  height: 80vh;
   padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: -var(--content-padding-top);
-
-  & .heading {
-    padding: 80px 10px;
-  }
+  margin-top: -28px;
 
   & .call-to-action {
     background-color: var(--primary-color);
